static/css/main.css
body,
html {
  width: 100%;
  height: 100%;
}

body {
  background-color: #212529;
  font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
  font-size: x-large;
}

hr {
  max-width: 50px;
  border-width: 3px;
  border-color: #f05f40;
}

hr.light {
  border-color: #fff;
}

a {
  color: #f05f40;
  -webkit-transition: all 0.2s;
  -moz-transition: all 0.2s;
  transition: all 0.2s;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
}

.bg-primary {
  background-color: #f05f40 !important;
}

.bg-dark {
  background-color: #212529 !important;
}

.text-faded {
  color: rgba(255, 255, 255, 0.7);
}

section {
  padding: 5rem 0;
}

.section-head {
  margin-bottom: 1rem;
}

::-moz-selection {
  color: #fff;
  background: #212529;
  text-shadow: none;
}

::selection {
  color: #fff;
  background: #212529;
  text-shadow: none;
}

img::selection {
  color: #fff;
  background: transparent;
}

img::-moz-selection {
  color: #fff;
  background: transparent;
}

header {
  width: 100%;
  height: 100%;
}

header.masthead hr {
  margin-top: 30px;
  margin-bottom: 30px;
}

header.masthead h1 {
  font-size: 2rem;
}

header.masthead p {
  font-weight: 300;
}

@media (min-width: 768px) {
  header.masthead p {
    font-size: 1.15rem;
  }
}

@media (min-width: 992px) {
  header.masthead {
    height: 100vh;
    min-height: 650px;
    padding-top: 0;
    padding-bottom: 0;
  }
  header.masthead h1 {
    font-size: 3rem;
  }
}

@media (min-width: 1200px) {
  header.masthead h1 {
    font-size: 4rem;
  }
}

.network-box {
  max-width: 400px;
}

.text-primary {
  color: #f05f40 !important;
}

.btn {
  font-weight: 700;
  text-transform: uppercase;
  border: none;
  border-radius: 300px;
  font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
}

.btn-xl {
  padding: 1rem 2rem;
}

.btn-primary {
  background-color: #f05f40;
  border-color: #f05f40;
}

.btn-primary:hover,
.btn-primary:focus,
.btn-primary:active {
  color: #fff;
  background-color: #ee4b28 !important;
}

.btn-primary:active,
.btn-primary:focus {
  box-shadow: 0 0 0 0.2rem rgba(240, 95, 64, 0.5) !important;
}

/* ----------- */
/* CUSTOM PART */
/* ----------- */

h2 {
  font-size: 3rem;
}

.rounded {
  border-radius: 1rem !important;
}

.section-title {
  display: inline-block;
}

.section-title i {
  font-size: x-large;
  visibility: hidden;
}

.section-title h2:hover i {
  visibility: visible;
  vertical-align: middle;
}

.transparent-link,
.transparent-link:active,
.transparent-link:hover {
  color: unset;
}

#particles canvas {
  position: absolute;
  width: 100%;
  height: auto;
  z-index: 1;
}

#particles .container {
  z-index: 2;
}

.logo img {
  margin-bottom: 1rem;
  width: 6rem;
}

.gotop {
  margin: 1rem;
  position: fixed;
  bottom: 0;
  right: 0;
  z-index: 100;
  width: 3rem;
  display: none;
  text-align: center;
  text-decoration: none;
  color: #ffffff;
  background: #f05f40;
  border-radius: 20%;
  opacity: 0.5;
}

.gotop:hover {
  opacity: 1;
  color: #ffffff;
}

.gotop i {
  font-size: 3rem;
}

#about {
  background-color: #fff;
}

#about .row {
  margin-bottom: 2rem;
}

#about p {
  text-align: justify;
  color: #6c757d;
  padding: 0 0.5rem;
  font-size: 1.25rem;
}

.track span {
  margin-bottom: 1rem;
  color: #a5a5a5;
}

#about h3 {
  font-weight: bold;
}

#about .track .head {
  padding-top: 2em;
  color: #f05f40;
}

#about .track .head * {
  display: inline-block;
}

#about .track .head i {
  margin-right: 10px;
}

#about .track .body {
  padding: 1.5em;
}

#about .wallet-icon {
  width: 100%;
  text-align: center;
  margin-top: 2rem;
  margin-bottom: 0;
  color: #795548;
}

.track {
  height: 100%;
  padding: 0 !important;
}

@media (max-width: 992px) {
  .tracks > div {
    margin-bottom: 2rem;
  }
}

.swiper-container {
  width: 100%;
  height: 100%;
  color: black;
}

.swiper-slide {
  text-align: center;
  font-size: 18px;
  background: #fff;
  display: flex;
  justify-content: center;
  align-items: center;
}

.swiper-wrapper {
  align-items: center;
}

#events .container-fluid {
  padding: unset;
}

.event {
  display: flex;
  flex-direction: column;
  border: 5px solid grey;
  border-radius: 20px;
}

.event.upcoming {
  border-color: #f05f40;
  box-shadow: 0 12px 15px black;
}

.event-body {
  padding: 30px 20px 0px 20px;
}

.event h3 {
  font-weight: bold;
  font-size: 1.3rem;
}

.event-date-time {
  margin: 20px 0px;
}

.event-date-time p {
  margin-bottom: 0px;
}

.event.upcoming .event-date-time p {
  font-weight: normal !important;
  font-size: unset !important;
}

.event.upcoming .occured-label {
  display: none;
}

.event .event-time {
  display: none;
}

.event.upcoming .event-time {
  display: block;
}

.event .event-date-time p:nth-child(1) {
  font-weight: lighter;
  font-size: smaller;
}

.event-venue {
  font-weight: lighter;
  display: none;
}

.event.upcoming .event-venue {
  display: block;
}

.event-more {
  width: 100%;
  background-color: grey;
  color: white !important;
  padding: 7px;
  font-size: medium;
  border-radius: 0px 0px 10px 10px;
}
.event.upcoming .event-more {
  background-color: #f05f40;
}

#donation {
  background-color: #141619;
}

#donation .donation-list {
  text-align: center;
  justify-content: space-evenly;
}

#donation .donation-list img {
  height: 25rem;
  width: auto;
  margin: 5px;
  transition: all 0.2s ease-in-out;
}

#donation .donation-list img:hover {
  transform: scale(1.1);
}

.alert-container {
  display: flex;
  justify-content: center;
}

.alert {
  display: none;
  position: fixed;
  bottom: 0;
  z-index: 1000;
  text-align: center;
  font-size: 1rem;
  box-shadow: 0 0 20px 0 #2d402d;
}

.carousel-navigation {
  display: flex;
  justify-content: center;
  width: 100%;
  font-size: 3em;
  margin-top: 20px;
}

.carousel-navigation * {
  margin: 0px 1rem;
  color: #7f7f7f;
}

.carousel-navigation *.disabled {
  color: #46494a;
}

#networks {
  background-color: #fff;
  color: #212529;
}

.network-box:hover * {
  color: #f05f40;
}

.network-box a {
  color: #212529;
  text-decoration: none;
}

.network-box:hover .fa-slack {
  color: #e9a820 !important;
}

.network-box:hover .fa-twitter {
  color: #00aced !important;
}

.network-box:hover .fa-github {
  color: #333 !important;
}

.network-box:hover .fa-meetup {
  color: #e0393e !important;
}

.network-box:hover .fa-envelope {
  color: gray !important;
}

.network-box:hover .fa-facebook-f {
  color: #3b5998 !important;
}

.network-box:hover .fa-linkedin {
  color: #4875b4 !important;
}

#team .team-list,
#partners .partner-list {
  text-align: center;
  justify-content: center;
}

#team .team-list .card,
#partners .partner-list .card {
  width: 9rem;
  background: none;
  border: none;
  color: #fff;
  margin: 1rem;
  font-size: large;
}

#partners .partner-list .card {
  width: 15rem;
}

.card .overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: 0.5s ease;
}

.card.pld .overlay {
  background-color: #266b35;
}

.card.card.unsnetwork .card-img-top {
  background: rgb(77, 211, 204);
  background: linear-gradient(315deg, rgba(77, 211, 204, 1) 0%, rgba(28, 38, 137, 1) 100%);
}

.card.unsnetwork .overlay {
  background: rgb(77, 211, 204);
  background: linear-gradient(315deg, rgba(77, 211, 204, 1) 0%, rgba(28, 38, 137, 1) 100%);
}

.card.unikname .overlay {
  background-color: #0f2852;
}

.card.novapuls .overlay {
  background-color: #ee6f3d;
}

.card:hover .overlay {
  opacity: 0.95;
}

.card .text {
  color: white;
  font-size: xx-large;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  text-align: center;
}

footer {
  background-color: #212529;
  color: #fff;
  padding: 1rem 0;
  font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
  font-size: small;
}

footer .fa-heart {
  color: #f05f40;
}

